fix-resolvendo cadastro de maquina

--- a/Site/public/dash-estatica/cadastroMaquina.html
+++ b/Site/public/dash-estatica/cadastroMaquina.html
@@ -8,9 +8,10 @@
     <title>Keep Swimming | dash-Cadastro</title>
 
     <script src="../assets/js/funcoes.js"></script>
-    <!-- <script src="../javaScript/cadastroMaquina.js"></script> -->
+    <script src="../javaScript/cadastroMaquina.js"></script>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="cad-maquina.css">
+    <!-- <link rel="stylesheet" href="./css/tela-cadastro.css"> -->
     <!-- <link rel="stylesheet" href="../public/css/tela-cadastro.css"> -->
 
 </head>
@@ -49,26 +50,23 @@
 
 
                 <div class="formulario">
-                    <form id="form_cadastro_maquina" method="post" onsubmit="return bt_cadastro()">
+                    <h3>Cadastre sua Máquina</h3>
+                    <form id="form_cadastro_maquina" method="post" onsubmit="return bt_cadastro_maquina()">
 
-                        <h3>Cadastre sua Máquina</h3>
 
                         <div class="roles">
 
                             <div class="ladoEsquerdo">
 
                                 <label for="hostName">HostName</label>
-                                <input type="text" name="hostname" placeholder="Host name" id="hostname_ipt">
-
-                                <label for="idMaquina>">ID Máquina</label>
-                                <input type="text" name="idmaquina" placeholder="ID da maquina" id="idmaquina_ipt">
+                                <input name="hostname" type="text" placeholder="Host name" id="hostname_ipt">
 
                                 <label for="idFuncionario">ID Funcionário</label>
-                                <input type="text" name="idfuncionario" placeholder="ID Funcionário"
+                                <input name="funcionarioId" type="text" placeholder="ID Funcionário"
                                     id="idfuncionario_ipt">
 
                                 <label for="sistemaOperacional">Sistema Operacional</label>
-                                <input type="text" name="sistemaoperacional" placeholder="Sistema Operacional"
+                                <input name="sistemaOperacional" type="text" placeholder="Sistema Operacional"
                                     id="sistemaoperacional_ipt">
 
 
@@ -79,13 +77,13 @@
                             <div class="ladodireito">
 
                                 <label for="arquitetura">Arquitetura</label>
-                                <input type="text" name="arquitetura" placeholder="32bits/64 bits" id="arquitetura_ipt">
+                                <input name="arquitetura" type="text" placeholder="32bits/64 bits" id="arquitetura_ipt">
 
                                 <label for="permissao">Permissão</label>
-                                <input type="text" name="permissao" placeholder="true / false" id="permissao_ipt">
+                                <input name="permissao" type="text" placeholder="true / false" id="permissao_ipt">
 
                                 <label for="fabricante">Fabricante</label>
-                                <input type="text" name="fabricante" placeholder="GNU" id="fabricante_ipt">
+                                <input name="fabricante" type="text" placeholder="GNU" id="fabricante_ipt">
 
 
                                 <div class="div_botao">
@@ -98,6 +96,11 @@
 
                     </form>
                 </div>
+                <div id="div_aguardar" class="loading-div">
+                    <img src="../assets/aguarde-pink.gif" id="loading-gif">
+
+                </div>
+                <div id="div_erros_login"></div>
                 <!-- <div class="mural-maquina">
                     <div class="conteiner">
                         <button href="#" class="list">Listar Máquinas</button>
@@ -181,86 +184,3 @@
 </body>
 
 </html>
-
-<script>
-
-    function limparFormulario() {
-        document.getElementById("form_cadastro_maquina").reset();
-    }
-
-    function bt_cadastro() {
-        aguardar();
-
-        // Nessa parte ele da um get (Pegar) la no formulario de cadastro pelo id = form_cadastro 
-        // e entende que tudo que estiver dentro dessa form e de cadastro 
-
-        var formulario = new URLSearchParams(new FormData(document.getElementById("form_cadastro_maquina")));
-
-        // Aqui setamos os campos que o usuario vai digitar atraves do campo "name" contido nas inputs
-
-        var idmaquina = formulario.get("idmaquina");
-        var idfuncionario = formulario.get("idfuncionario");
-        var sistemaoperacional = formulario.get("sistemaoperacional");
-        var arquitetura = formulario.get("arquitetura");
-        var permissao = formulario.get("permissao");
-        var fabricante = formulario.get("fabricante");
-        var hostname = formulario.get("hostname");
-
-
-
-        // TODO: VERIFICAR AS VALIDAÇÕES 
-        if (idmaquina == "" || idfuncionario == "" || sistemaoperacional == "" || arquitetura == "" || permissao == "" || fabricante == "" || hostname == "") {
-
-            window.alert("Preencha todos os campos para prosseguir!");
-            if (idmaquina == "") {
-                console.log('empresa está em branco')
-            }
-            if (idfuncionario == "") {
-                console.log('email está em branco')
-            }
-            if (sistemaoperacional == "") {
-                console.log('senha está em branco')
-            }
-            if (arquitetura == "") {
-                console.log('confirmacaoSenha está em branco')
-            }
-            if (permissao == "") {
-                console.log('confirmacaoEmail está em branco')
-            }
-            if (perfabricantemissao == "") {
-                console.log('CEP está em branco')
-            }
-            if (hostname == "") {
-                console.log('CNPJ está em branco')
-            }
-            finalizarAguardar();
-            return false;
-        }
-
-
-        // Se tudo estiver ok ele faz uma busca la na ROUTERS por USUARIOS e o metdodo /CADASTRAR
-
-        fetch("/usuarios/cadastrarMaquina", {
-            method: "POST",
-            body: formulario
-        }).then(function (resposta) {
-
-            console.log("resposta: ", resposta);
-
-            if (resposta.ok) {
-                window.alert("Cadastro realizado com sucesso!");
-                window.location = "cadastro-maquina.html";
-                limparFormulario();
-                finalizarAguardar();
-
-            } else {
-                throw ("Houve um erro ao tentar realizar o cadastro!");
-            }
-        }).catch(function (resposta) {
-            console.log(`#ERRO: ${resposta}`);
-            finalizarAguardar();
-        });
-
-        return false;
-    }
-</script>
