--- a/Site/public/dash-estatica/dashboard.html
+++ b/Site/public/dash-estatica/dashboard.html
@@ -141,11 +141,12 @@
 
 
 
-
+            <h5 class="usoIde">Comparação de processamento por uso de Ide's</h5>
             <div class="centralizar">
 
-                <!-- Gráfico de Linhas -->;
+                <!-- Gráfico de Linhas -->
                 <div class="graph1">
+                    
                     <canvas id="chartLine1"></canvas>
                 </div>
 
@@ -650,4 +651,4 @@
     function Monitorar() {
         window.location = './graficos.html'
     }
-</script>-->
+</script>
