fix- arrumando graficos

--- a/Site/public/dash-estatica/dashboard.html
+++ b/Site/public/dash-estatica/dashboard.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="nav.css">
     <!-- <link rel="stylesheet" href="dashboards.css"> -->
     <script src="../assets/js/funcoes.js"></script>
-  
+  <script src="../assets/js/dash.js" ></script>
 
     <!-- scripts do Chart.js -->
     <script type="text/javascript" src="https://www.chartjs.org/dist/2.8.0/Chart.min.js"></script>
@@ -63,7 +63,7 @@
 
                         <div class="miniInfo">
 
-                            <div class="esseaqui">
+                            <div class="posisionamentoMiniInfo">
 
                                 <h4>Quantidade de devs:</h4>
                                 <span id="valorDvs" class="vlrMinInf">00</span>
@@ -80,7 +80,7 @@
 
                         <div class="miniInfo">
 
-                            <div class="esseaqui">
+                            <div class="posisionamentoMiniInfo">
 
                                 <h4>Quantidade de maquinas:</h4>
                                 <span id="valorMaq" class="vlrMinInf">00</span>
@@ -96,7 +96,7 @@
                         </div>
                         <div class="miniInfo">
 
-                            <div class="esseaqui">
+                            <div class="posisionamentoMiniInfo">
 
                                 <h4>Quantidade Sistemas linux:</h4>
                                 <span id="valorLinux" class="vlrMinInf">00</span>
@@ -112,7 +112,7 @@
                         </div>
                         <div class="miniInfo">
 
-                            <div class="esseaqui">
+                            <div class="posisionamentoMiniInfo">
 
                                 <h4>Quantidade Sistema windons:</h4>
                                 <span id="valorWind" class="vlrMinInf">00</span>
@@ -146,8 +146,7 @@
 
                 <!-- Gráfico de Linhas -->
                 <div class="graph1">
-                    
-                    <canvas id="chartLine1"></canvas>
+                  
                 </div>
 
                 <!-- Grafico Pizza/Torta -->
@@ -306,7 +305,7 @@
 
 <!-- Script antigo para pegar as cores -->
 
-<script>
+<!-- <script>
     function Monitorar() {
         window.location = './graficos.html'
     }
@@ -651,4 +650,4 @@
     function Monitorar() {
         window.location = './graficos.html'
     }
-</script>
+</script> -->
