--- a/Site/public/dash-estatica/dashboard.html
+++ b/Site/public/dash-estatica/dashboard.html
@@ -21,10 +21,10 @@
 
 </head>
 
-<body>
+<!-- <body> -->
     <!-- Chama o metodo que so permite permanecer na pagina se tiver passado pelo login antes  -->
 
-    <!-- <body onload="validarSessao(),  obterDadosGrafico(1)"> -->
+    <body onload="validarSessao(),  obterDadosGrafico()">
 
     <div class="header">
         <img src="../assets/icons/logo-padrao.png" alt="">
@@ -61,7 +61,7 @@
 
                     <div class="divMinisInfos">
 
-                        <div class="miniInfo">
+                        <!-- <div class="miniInfo">
 
                             <div class="posisionamentoMiniInfo">
 
@@ -91,9 +91,9 @@
                             <div class="imgInfos">
                                 <img src="./imgs/maquinas.png" style="width: 10%;height: 20%;">
                                 <img src="./imgs/stas.png" style="height: 30px;">
-                            </div>
+                            </div> -->
 
-                        </div>
+                        <!-- </div> -->
                         <div class="miniInfo">
 
                             <div class="posisionamentoMiniInfo">
